// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interests should show error when fetching interest suggestions failed 1`] = `
<div>
  <h1
    className="sc-frDJqD bEqUar"
  >
    Kiinnostukset
  </h1>
  <div>
    error
  </div>
</div>
`;

exports[`Interests should show loading indicator (placeholder tags) when fetching suggestions 1`] = `
<div>
  <h1
    className="sc-bdVaJa hqCxXu"
  >
    Kiinnostukset
  </h1>
  <div
    className="sc-jTzLTM hKvEFR"
  >
    <div
      className="sc-cSHVUG hdElqZ"
    >
      <div
        className="sc-gqjmRU fHfsQS"
      >
        <div
          className="sc-VigVT iouIt"
        />
        <div
          className="sc-VigVT iouIt"
        />
        <div
          className="sc-VigVT iouIt"
        />
        <div
          className="sc-VigVT iouIt"
        />
      </div>
    </div>
    <div
      className="sc-fjdhpX cumejn"
    >
      <div
        className="sc-chPdSV hJWNFA"
        width="55%"
      />
      <div
        className="sc-chPdSV bpmcQL"
        width="77%"
      />
      <div
        className="sc-chPdSV fBVnUe"
        width="65%"
      />
    </div>
    <div
      className="sc-jzJRlG eAHvmF"
    >
      <div
        className="sc-kAzzGY cedijR"
        width="2rem"
      />
      <div
        className="sc-kAzzGY cSSqcB"
        width="3rem"
      />
      <div
        className="sc-kAzzGY crbNhn"
        width="5rem"
      />
      <div
        className="sc-kAzzGY eYLYhA"
        width="4rem"
      />
      <div
        className="sc-kAzzGY hoUyXS"
        width="3rem"
      />
      <div
        className="sc-kAzzGY bFDve"
        width="2rem"
      />
      <div
        className="sc-kAzzGY eYLYhA"
        width="4rem"
      />
      <div
        className="sc-kAzzGY cSSqcB"
        width="3rem"
      />
      <div
        className="sc-kAzzGY crbNhn"
        width="5rem"
      />
      <div
        className="sc-kAzzGY eDYTqb"
        width="4rem"
      />
      <div
        className="sc-kAzzGY bFDve"
        width="2rem"
      />
      <div
        className="sc-kAzzGY cSSqcB"
        width="3rem"
      />
      <div
        className="sc-kAzzGY crbNhn"
        width="5rem"
      />
      <div
        className="sc-kAzzGY eYLYhA"
        width="4rem"
      />
      <div
        className="sc-kAzzGY cSSqcB"
        width="3rem"
      />
      <div
        className="sc-kAzzGY eYLYhA"
        width="4rem"
      />
      <div
        className="sc-kAzzGY hoUyXS"
        width="3rem"
      />
      <div
        className="sc-kAzzGY eYLYhA"
        width="4rem"
      />
      <div
        className="sc-kAzzGY cSSqcB"
        width="3rem"
      />
      <div
        className="sc-kAzzGY bFDve"
        width="2rem"
      />
      <div
        className="sc-kAzzGY crbNhn"
        width="5rem"
      />
      <div
        className="sc-kAzzGY eYLYhA"
        width="4rem"
      />
    </div>
  </div>
</div>
`;

exports[`Interests should show subtopics for selected topic 1`] = `
<div>
  <h1
    className="sc-hwwEjo Rvtnn"
  >
    Kiinnostukset
  </h1>
  <p>
    Seuraavaksi kartoitamme sinua kiinnostavia aiheita.
  </p>
  <h2
    className="sc-kPVwWT jtGTsw"
  >
    Valitse 3 – 8 aihetta, joiden parissa sinua kiinnostaisi työskennellä.
  </h2>
  <ul
    className="sc-esOvli hoArCn"
  >
    <li
      className="sc-cmthru buDDcM"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kIPQKe sc-eXEjpC kbtrQq"
          onClick={[Function]}
          selected={false}
          value="Taide ja kulttuuri"
        >
          Taide ja kulttuuri
          <div
            className="sc-RefOD sc-iQKALj kYfIpi"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-cmthru buDDcM"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kIPQKe sc-eXEjpC evYlQr"
          onClick={[Function]}
          selected={true}
          value="Luonto ja ympäristö"
        >
          Luonto ja ympäristö
          <div
            className="sc-RefOD sc-iQKALj kxUNtH"
            selected={true}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
      <ul
        className="sc-hrWEMg iKqHeu"
      >
        <li
          className="sc-eTuwsz dyuKag"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-kIPQKe sc-ibxdXY gFeJUV"
              onClick={[Function]}
              selected={false}
              value="Kasvitiede"
            >
              Kasvitiede
              <div
                className="sc-RefOD sc-bwCtUz ihyaBw"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "paddingTop": "0.3rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-eTuwsz dyuKag"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-kIPQKe sc-ibxdXY gFeJUV"
              onClick={[Function]}
              selected={false}
              value="Eläintiede"
            >
              Eläintiede
              <div
                className="sc-RefOD sc-bwCtUz ihyaBw"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "paddingTop": "0.3rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-eTuwsz dyuKag"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-kIPQKe sc-ibxdXY gFeJUV"
              onClick={[Function]}
              selected={false}
              value="Luonnonsuojelu"
            >
              Luonnonsuojelu
              <div
                className="sc-RefOD sc-bwCtUz ihyaBw"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "paddingTop": "0.3rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-eTuwsz dyuKag"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-kIPQKe sc-ibxdXY gFeJUV"
              onClick={[Function]}
              selected={false}
              value="Ympäristönsuojelu"
            >
              Ympäristönsuojelu
              <div
                className="sc-RefOD sc-bwCtUz ihyaBw"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "paddingTop": "0.3rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-eTuwsz dyuKag"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-kIPQKe sc-ibxdXY gFeJUV"
              onClick={[Function]}
              selected={false}
              value="Ympäristö"
            >
              Ympäristö
              <div
                className="sc-RefOD sc-bwCtUz ihyaBw"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "paddingTop": "0.3rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-eTuwsz dyuKag"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-kIPQKe sc-ibxdXY gFeJUV"
              onClick={[Function]}
              selected={false}
              value="Metsätalous"
            >
              Metsätalous
              <div
                className="sc-RefOD sc-bwCtUz ihyaBw"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "paddingTop": "0.3rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-eTuwsz dyuKag"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-kIPQKe sc-ibxdXY gFeJUV"
              onClick={[Function]}
              selected={false}
              value="Metsänhoito"
            >
              Metsänhoito
              <div
                className="sc-RefOD sc-bwCtUz ihyaBw"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "paddingTop": "0.3rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-eTuwsz dyuKag"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-kIPQKe sc-ibxdXY gFeJUV"
              onClick={[Function]}
              selected={false}
              value="Maatalous"
            >
              Maatalous
              <div
                className="sc-RefOD sc-bwCtUz ihyaBw"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "paddingTop": "0.3rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-eTuwsz dyuKag"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-kIPQKe sc-ibxdXY gFeJUV"
              onClick={[Function]}
              selected={false}
              value="Maanviljely"
            >
              Maanviljely
              <div
                className="sc-RefOD sc-bwCtUz ihyaBw"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "paddingTop": "0.3rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-eTuwsz dyuKag"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-kIPQKe sc-ibxdXY gFeJUV"
              onClick={[Function]}
              selected={false}
              value="Puutarhanhoito"
            >
              Puutarhanhoito
              <div
                className="sc-RefOD sc-bwCtUz ihyaBw"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "paddingTop": "0.3rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-eTuwsz dyuKag"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-kIPQKe sc-ibxdXY gFeJUV"
              onClick={[Function]}
              selected={false}
              value="Kotieläintalous"
            >
              Kotieläintalous
              <div
                className="sc-RefOD sc-bwCtUz ihyaBw"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "paddingTop": "0.3rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-eTuwsz dyuKag"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-kIPQKe sc-ibxdXY gFeJUV"
              onClick={[Function]}
              selected={false}
              value="Turkisteollisuus"
            >
              Turkisteollisuus
              <div
                className="sc-RefOD sc-bwCtUz ihyaBw"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "paddingTop": "0.3rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-eTuwsz dyuKag"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-kIPQKe sc-ibxdXY gFeJUV"
              onClick={[Function]}
              selected={false}
              value="Metsäteollisuus"
            >
              Metsäteollisuus
              <div
                className="sc-RefOD sc-bwCtUz ihyaBw"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "paddingTop": "0.3rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-eTuwsz dyuKag"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-kIPQKe sc-ibxdXY gFeJUV"
              onClick={[Function]}
              selected={false}
              value="Kalastus"
            >
              Kalastus
              <div
                className="sc-RefOD sc-bwCtUz ihyaBw"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "paddingTop": "0.3rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-eTuwsz dyuKag"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-kIPQKe sc-ibxdXY gFeJUV"
              onClick={[Function]}
              selected={false}
              value="Metsästys"
            >
              Metsästys
              <div
                className="sc-RefOD sc-bwCtUz ihyaBw"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "paddingTop": "0.3rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-eTuwsz dyuKag"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-kIPQKe sc-ibxdXY gFeJUV"
              onClick={[Function]}
              selected={false}
              value="Biologia"
            >
              Biologia
              <div
                className="sc-RefOD sc-bwCtUz ihyaBw"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "paddingTop": "0.3rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
      </ul>
    </li>
    <li
      className="sc-cmthru buDDcM"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kIPQKe sc-eXEjpC kbtrQq"
          onClick={[Function]}
          selected={false}
          value="Maantiede ja yhteiskuntasuunnittelu"
        >
          Maantiede ja yhteiskuntasuunnittelu
          <div
            className="sc-RefOD sc-iQKALj kYfIpi"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-cmthru buDDcM"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kIPQKe sc-eXEjpC kbtrQq"
          onClick={[Function]}
          selected={false}
          value="Yhteiskunta ja talous"
        >
          Yhteiskunta ja talous
          <div
            className="sc-RefOD sc-iQKALj kYfIpi"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-cmthru buDDcM"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kIPQKe sc-eXEjpC kbtrQq"
          onClick={[Function]}
          selected={false}
          value="Turvallisuus "
        >
          Turvallisuus 
          <div
            className="sc-RefOD sc-iQKALj kYfIpi"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-cmthru buDDcM"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kIPQKe sc-eXEjpC kbtrQq"
          onClick={[Function]}
          selected={false}
          value="Koulutus"
        >
          Koulutus
          <div
            className="sc-RefOD sc-iQKALj kYfIpi"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-cmthru buDDcM"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kIPQKe sc-eXEjpC kbtrQq"
          onClick={[Function]}
          selected={false}
          value="Terveys ja hyvinvointi"
        >
          Terveys ja hyvinvointi
          <div
            className="sc-RefOD sc-iQKALj kYfIpi"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-cmthru buDDcM"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kIPQKe sc-eXEjpC kbtrQq"
          onClick={[Function]}
          selected={false}
          value="Viestintä"
        >
          Viestintä
          <div
            className="sc-RefOD sc-iQKALj kYfIpi"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-cmthru buDDcM"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kIPQKe sc-eXEjpC kbtrQq"
          onClick={[Function]}
          selected={false}
          value="Informaatiotekniikka"
        >
          Informaatiotekniikka
          <div
            className="sc-RefOD sc-iQKALj kYfIpi"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-cmthru buDDcM"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kIPQKe sc-eXEjpC kbtrQq"
          onClick={[Function]}
          selected={false}
          value="Rakennusala"
        >
          Rakennusala
          <div
            className="sc-RefOD sc-iQKALj kYfIpi"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-cmthru buDDcM"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kIPQKe sc-eXEjpC kbtrQq"
          onClick={[Function]}
          selected={false}
          value="Matkailu- ja ravintola-ala"
        >
          Matkailu- ja ravintola-ala
          <div
            className="sc-RefOD sc-iQKALj kYfIpi"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-cmthru buDDcM"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kIPQKe sc-eXEjpC kbtrQq"
          onClick={[Function]}
          selected={false}
          value="Liikenne ja logistiikka"
        >
          Liikenne ja logistiikka
          <div
            className="sc-RefOD sc-iQKALj kYfIpi"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-cmthru buDDcM"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kIPQKe sc-eXEjpC kbtrQq"
          onClick={[Function]}
          selected={false}
          value="Historia ja uskonto"
        >
          Historia ja uskonto
          <div
            className="sc-RefOD sc-iQKALj kYfIpi"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-cmthru buDDcM"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kIPQKe sc-eXEjpC kbtrQq"
          onClick={[Function]}
          selected={false}
          value="Matematiikka ja fysiikka"
        >
          Matematiikka ja fysiikka
          <div
            className="sc-RefOD sc-iQKALj kYfIpi"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Interests should show top level interest suggestions when fetched successfully 1`] = `
<div>
  <h1
    className="sc-hSdWYo fQrRHI"
  >
    Kiinnostukset
  </h1>
  <p>
    Seuraavaksi kartoitamme sinua kiinnostavia aiheita.
  </p>
  <h2
    className="sc-eHgmQL kvOXdD"
  >
    Valitse 3 – 8 aihetta, joiden parissa sinua kiinnostaisi työskennellä.
  </h2>
  <ul
    className="sc-eqIVtm dQJFJB"
  >
    <li
      className="sc-fAjcbJ gicyuu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-brqgnP sc-cMljjf hPupow"
          onClick={[Function]}
          selected={false}
          value="Taide ja kulttuuri"
        >
          Taide ja kulttuuri
          <div
            className="sc-jDwBTQ sc-gPEVay cQKYhy"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fAjcbJ gicyuu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-brqgnP sc-cMljjf hPupow"
          onClick={[Function]}
          selected={false}
          value="Luonto ja ympäristö"
        >
          Luonto ja ympäristö
          <div
            className="sc-jDwBTQ sc-gPEVay cQKYhy"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fAjcbJ gicyuu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-brqgnP sc-cMljjf hPupow"
          onClick={[Function]}
          selected={false}
          value="Maantiede ja yhteiskuntasuunnittelu"
        >
          Maantiede ja yhteiskuntasuunnittelu
          <div
            className="sc-jDwBTQ sc-gPEVay cQKYhy"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fAjcbJ gicyuu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-brqgnP sc-cMljjf hPupow"
          onClick={[Function]}
          selected={false}
          value="Yhteiskunta ja talous"
        >
          Yhteiskunta ja talous
          <div
            className="sc-jDwBTQ sc-gPEVay cQKYhy"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fAjcbJ gicyuu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-brqgnP sc-cMljjf hPupow"
          onClick={[Function]}
          selected={false}
          value="Turvallisuus "
        >
          Turvallisuus 
          <div
            className="sc-jDwBTQ sc-gPEVay cQKYhy"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fAjcbJ gicyuu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-brqgnP sc-cMljjf hPupow"
          onClick={[Function]}
          selected={false}
          value="Koulutus"
        >
          Koulutus
          <div
            className="sc-jDwBTQ sc-gPEVay cQKYhy"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fAjcbJ gicyuu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-brqgnP sc-cMljjf hPupow"
          onClick={[Function]}
          selected={false}
          value="Terveys ja hyvinvointi"
        >
          Terveys ja hyvinvointi
          <div
            className="sc-jDwBTQ sc-gPEVay cQKYhy"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fAjcbJ gicyuu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-brqgnP sc-cMljjf hPupow"
          onClick={[Function]}
          selected={false}
          value="Viestintä"
        >
          Viestintä
          <div
            className="sc-jDwBTQ sc-gPEVay cQKYhy"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fAjcbJ gicyuu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-brqgnP sc-cMljjf hPupow"
          onClick={[Function]}
          selected={false}
          value="Informaatiotekniikka"
        >
          Informaatiotekniikka
          <div
            className="sc-jDwBTQ sc-gPEVay cQKYhy"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fAjcbJ gicyuu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-brqgnP sc-cMljjf hPupow"
          onClick={[Function]}
          selected={false}
          value="Rakennusala"
        >
          Rakennusala
          <div
            className="sc-jDwBTQ sc-gPEVay cQKYhy"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fAjcbJ gicyuu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-brqgnP sc-cMljjf hPupow"
          onClick={[Function]}
          selected={false}
          value="Matkailu- ja ravintola-ala"
        >
          Matkailu- ja ravintola-ala
          <div
            className="sc-jDwBTQ sc-gPEVay cQKYhy"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fAjcbJ gicyuu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-brqgnP sc-cMljjf hPupow"
          onClick={[Function]}
          selected={false}
          value="Liikenne ja logistiikka"
        >
          Liikenne ja logistiikka
          <div
            className="sc-jDwBTQ sc-gPEVay cQKYhy"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fAjcbJ gicyuu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-brqgnP sc-cMljjf hPupow"
          onClick={[Function]}
          selected={false}
          value="Historia ja uskonto"
        >
          Historia ja uskonto
          <div
            className="sc-jDwBTQ sc-gPEVay cQKYhy"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fAjcbJ gicyuu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-brqgnP sc-cMljjf hPupow"
          onClick={[Function]}
          selected={false}
          value="Matematiikka ja fysiikka"
        >
          Matematiikka ja fysiikka
          <div
            className="sc-jDwBTQ sc-gPEVay cQKYhy"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "paddingRight": "0.15rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
  </ul>
</div>
`;
